--- a/views/layout/itemContent.ejs
+++ b/views/layout/itemContent.ejs
@@ -1,107 +1,19 @@
-
-
-
 <div class="row">
-    <div class="col mb-4">
+      <% for(let product of products) {%>
+        <div class="col mb-4">
             <div class="card" style="width: 18rem;">
-                    <img src="/images/csgo.jpg" class="card-img-top" alt="..." >
+                    <img src="<%=product.imagePath%>
+                    " class="card-img-top" alt="..." >
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <div class="pull-left">$12</div>
+                      <h5 class="card-title"><%=product.title%>
+                       </h5>
+                      <p class="card-text"><%=product.description%>
+                        </p>
+                      <div class="pull-left"><%=product.price%>
+                        </div>
                       <a href="#" class="btn btn-success pull-right">Add to cart</a>
                     </div>
                   </div>
-    </div>
-    <div class="col mb-4">
-            <div class="card" style="width: 18rem;">
-                    <img src="/images/devil may cry.jpeg" class="card-img-top" alt="..." >
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <div class="pull-left">$12</div>
-                      <a href="#" class="btn btn-success pull-right">Add to cart</a>
-                    </div>
-                  </div>
-    </div>
-    <div class="col mb-4">
-            <div class="card" style="width: 18rem;">
-                    <img src="/images/dota.jpg" class="card-img-top" alt="..." >
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <div class="pull-left">$12</div>
-                      <a href="#" class="btn btn-success pull-right">Add to cart</a>
-                    </div>
-                  </div>
-    </div>
-    <div class="col mb-4">
-            <div class="card" style="width: 18rem;">
-                    <img src="/images/lol.jpg" class="card-img-top" alt="..." >
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <div class="pull-left">$12</div>
-                      <a href="#" class="btn btn-success pull-right">Add to cart</a>
-                    </div>
-                  </div>
-    </div>
-    <div class="col mb-4">
-            <div class="card" style="width: 18rem;">
-                    <img src="/images/poly bridge.jpg" class="card-img-top" alt="..." >
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <div class="pull-left">$12</div>
-                      <a href="#" class="btn btn-success pull-right">Add to cart</a>
-                    </div>
-                  </div>
-    </div>
-    <div class="col mb-4">
-            <div class="card" style="width: 18rem;">
-                    <img src="/images/pubg.jpg" class="card-img-top" alt="..." >
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <div class="pull-left">$12</div>
-                      <a href="#" class="btn btn-success pull-right">Add to cart</a>
-                    </div>
-                  </div>
-    </div>
-    <div class="col mb-4">
-            <div class="card" style="width: 18rem;">
-                    <img src="/images/resident evil.jpg" class="card-img-top" alt="..." >
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <div class="pull-left">$12</div>
-                      <a href="#" class="btn btn-success pull-right">Add to cart</a>
-                    </div>
-                  </div>
-    </div>
-
-    <div class="col mb-4">
-            <div class="card" style="width: 18rem;">
-                    <img src="/images/ros.jpg" class="card-img-top" alt="..." >
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <div class="pull-left">$12</div>
-                      <a href="#" class="btn btn-success pull-right">Add to cart</a>
-                    </div>
-                  </div>
-    </div>
-    <div class="col mb-4">
-            <div class="card" style="width: 18rem;">
-                    <img src="/images/slay the spire.jpg" class="card-img-top" alt="..." >
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <div class="pull-left">$12</div>
-                      <a href="#" class="btn btn-success pull-right">Add to cart</a>
-                    </div>
-                  </div>
-    </div>
-       
-              
+      </div>
+      <% } %>             
 </div>
